resources/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kubvernor-gateway
spec:
  controllerName: kubvernor.com/proxy-controller
