resources/gateway_class_for_inference.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-conformance
spec:
  controllerName: kubvernor.com/proxy-controller
