resources/agentgateway_one_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-one
spec:
  parentRefs:
    - name: agentgateway-one
      port: 1080

  hostnames:
    - "www.service-one.com"
    - "*.service-one.com"
    - "service-one.com"
  rules:
    - backendRefs:
        - name: echo-service
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /login
        - path:
            type: PathPrefix
            value: /data
