resources/agentgateway_route_service_two.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agw-route-service-two
spec:
  parentRefs:
    - name: agentgateway-one
      port: 1080

  hostnames:
    - "www.service-two.com"
    - "*.service-two.com"
    - "service-two.com"
  rules:
    - backendRefs:
        - name: echo-service
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /login2
        - path:
            type: PathPrefix
            value: /data2
