resources/route_two.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-two
spec:
  parentRefs:
  - name: gateway-one
    port: 2081
  hostnames:
  - "www.example.com"
  rules:
  - backendRefs:
    - name: echo-service
      port: 9080
    # matches:
    # - path:
    #     type: PathPrefix
    #     value: /login
    # - path:
    #     type: PathPrefix
    #     value: /data
